{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 14,
  "lineage": "5bfe9a01-3abe-7dde-7b08-03b48a3855c1",
  "resources": [
    {
      "module": "module.webserver_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767653220718:vpc/vpc-fdbc6f80",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-4614b929",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ead4a990",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-fdbc6f80",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-ace5bad2",
            "owner_id": "767653220718"
          }
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767653220718:loadbalancer/app/webservers-stage/1b66c5d7c3b90adf",
            "arn_suffix": "app/webservers-stage/1b66c5d7c3b90adf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "webservers-stage-2004603244.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:767653220718:loadbalancer/app/webservers-stage/1b66c5d7c3b90adf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webservers-stage",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e3af434934d51190"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-084c3506"
              },
              {
                "subnet_id": "subnet-4762e066"
              },
              {
                "subnet_id": "subnet-b8498289"
              },
              {
                "subnet_id": "subnet-dd9acd90"
              },
              {
                "subnet_id": "subnet-f2f373ad"
              },
              {
                "subnet_id": "subnet-fc83049a"
              }
            ],
            "subnets": [
              "subnet-084c3506",
              "subnet-4762e066",
              "subnet-b8498289",
              "subnet-dd9acd90",
              "subnet-f2f373ad",
              "subnet-fc83049a"
            ],
            "vpc_id": "vpc-fdbc6f80",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb",
            "module.webserver_cluster.data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767653220718:listener/app/webservers-stage/1b66c5d7c3b90adf/c51354ac2ef15723",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767653220718:listener/app/webservers-stage/1b66c5d7c3b90adf/c51354ac2ef15723",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767653220718:loadbalancer/app/webservers-stage/1b66c5d7c3b90adf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_lb.example",
            "module.webserver_cluster.aws_security_group.alb",
            "module.webserver_cluster.data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767653220718:targetgroup/webservers-stage/026ce8299162de76",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767653220718:listener-rule/app/webservers-stage/1b66c5d7c3b90adf/c51354ac2ef15723/b6bee1ca895ca9e1",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767653220718:listener-rule/app/webservers-stage/1b66c5d7c3b90adf/c51354ac2ef15723/b6bee1ca895ca9e1",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:767653220718:listener/app/webservers-stage/1b66c5d7c3b90adf/c51354ac2ef15723",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_lb.example",
            "module.webserver_cluster.aws_lb_listener.http",
            "module.webserver_cluster.aws_lb_target_group.asg",
            "module.webserver_cluster.aws_security_group.alb",
            "module.webserver_cluster.data.aws_subnet_ids.default",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767653220718:targetgroup/webservers-stage/026ce8299162de76",
            "arn_suffix": "targetgroup/webservers-stage/026ce8299162de76",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767653220718:targetgroup/webservers-stage/026ce8299162de76",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webservers-stage",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-fdbc6f80"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767653220718:security-group/sg-0e3af434934d51190",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e3af434934d51190",
            "ingress": [],
            "name": "webservers-stage-alb",
            "name_prefix": "",
            "owner_id": "767653220718",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-fdbc6f80"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767653220718:security-group/sg-0224e099771a83dea",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0224e099771a83dea",
            "ingress": [],
            "name": "webservers-stage-instance",
            "name_prefix": "",
            "owner_id": "767653220718",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-fdbc6f80"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1171269996",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e3af434934d51190",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-882339609",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e3af434934d51190",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-876463359",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0224e099771a83dea",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.instance"
          ]
        }
      ]
    }
  ]
}